<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Material.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:scrollbarStyle="outsideInset"
    android:verticalScrollbarPosition="right"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <!-- Type de référence (Dropdown/Spinner) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_reference" />

        <Spinner
            android:id="@+id/spinner_type_of_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Nom du demandeur (EditText) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requester_name" />

        <EditText
            android:id="@+id/requester_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_requester"
            android:textSize="22sp" />
        <!-- Gamme (Dropdown/Spinner) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/product_line" />

        <Spinner
            android:id="@+id/spinner_productLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_marking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/marking" />

        <RadioGroup
            android:id="@+id/radioGroup_Marking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <!-- Spinner cachée par défaut -->
        <Spinner
            android:id="@+id/options_marking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone" />
        <!-- Type d'article (Dropdown/Spinner) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/type_d_article" />

        <Spinner
            android:id="@+id/spinner_type_of_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!-- Material Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_classification_description" />

        <EditText
            android:id="@+id/product_classification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_classification_description"
            android:inputType="text"
            android:textSize="22sp" />

        <!-- Prix catalogue -->
        <TextView
            android:id="@+id/price_catalog_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_catalog" />

        <EditText
            android:id="@+id/price_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_price"
            android:inputType="text"
            android:textSize="22sp" />

        <!-- Bouton Envoyer -->
        <!-- Bouton Envoyer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SEND"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="SAVE" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
