<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="polite"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/UserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/UserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion" />
</LinearLayout>
